Implement DSS-only version of plugin, removes SQLite TSEnsembles format support.
This was done to align more closely with the RTS version of the plugin in
preparation for future work to bring enhancements from RTS to this version.

This depends on a per-event "forecasts" DSS file that has the ensembles for a
single WAT event, as the C:000000| collection prefix in the DSS pathname's
F-part is used for ensemble traces in RTS and event IDs in WAT.