@@ -1,78 +1,16 @@
 plugins {
-    id 'java'
-    id 'maven-publish'
-}
-//Dependency Management
-repositories {
-    mavenCentral()
-    maven {
-        url "https://www.hec.usace.army.mil/nexus/repository/maven-public/"
-    }
+    id 'base'
+    id "com.palantir.git-version" version "3.0.0"
 }
 
-def wat_version = "v1.1-1.1.0.682-SNAPSHOT"
-
-dependencies {
-    implementation "mil.army.usace.hec.wat:wat-hec:v1.1-1.1.0.682-20220418.154759-1"
-    runtimeOnly "org.xerial:sqlite-jdbc:3.30.1"
-    implementation "mil.army.usace.hec:javaHeclib:7-HZ-win-x64@zip"
-    implementation "org.junit.jupiter:junit-jupiter:5.4.2"
-    implementation "org.jdom:jdom:1.1"
-    implementation "org.apache.commons:commons-lang3:3.11"
-    implementation "mil.army.usace.hec.wat:wat-rma:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat-hec-maps:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat-hecnf:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat-hecnf-pluginapi:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat-rma:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat-rmadev:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat:${wat_version}@jar"
-    implementation "mil.army.usace.hec.wat:wat-model:${wat_version}@jar"
-    implementation project(':FIRO_TSEnsembles:FIRO_TSEnsembles')
-}
-//Testing
-test{
-    useJUnitPlatform()
-    testLogging{
-        test {
-            testLogging {
-                events "PASSED","FAILED", "SKIPPED"
-            }
-        }
-    }
-}
-tasks.withType(Test) {
-    useJUnitPlatform()
-    jvmArgs "--enable-preview"
+def versionLabel(gitInfo) {
+    def branch = gitInfo.branchName // all branches are snapshots, only tags get released
+    def tag = gitInfo.lastTag
+    // tag is returned as is. Branch may need cleanup
+    return branch == null ? tag : branch.replace("/", "-") + "-SNAPSHOT"
 }
 
-//Publishing
-group 'mil.army.usace.hec'
-version '1.0-SNAPSHOT'
-publishing {
-    repositories {
-        maven {
-            // Choose whatever name you want
-            name = "GitHubPackages"
-            // The url of the repository, where the artifacts will be published
-            url = "https://maven.pkg.github.com/HydrologicEngineeringCenter/FIRO_WAT_ForecastProcessor"
-            credentials {
-                // The credentials (described in the next section)
-                username = System.getenv("USERNAME")
-                password = System.getenv("TOKEN")
-            }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            from components.java
-        }
-    }
-
-}
-jar {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-    manifest {
-        attributes "WatPluginMainClass": "HEC.WAT.ForecastProcessor.FIRO_WFP_Plugin"
-    }
+allprojects {
+    group = 'HEC.WAT.ForecastProcessor'
+    version = versionLabel(versionDetails())
 }
